# geometry-of-ai-2026-02

./: .markdownlint.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
exercise/: 02.md  03.md  04.md  06.md  12.md  13.md  15.md
scripts/: check-math.mjs  check_inline_math_spacing.py  check_keyword_duplicates.py  check_section_order.py  check_snippet.py  check_snippet_line_counts.py  lint_no_plain_python_fence.py  remove_dash_only_lines.py  sync_snippets.py
series/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  appendix.1.md  appendix.2.md  appendix.3.md  appendix.4.md  appendix.5.md  appendix.6.md  keywords.md
snippets/exercise/: 02_angle_concentration.py  02_distance_concentration.py  03_l2_normalization_dot.py  03_vmf_visualization.py  04_softmax_temperature.py  06_cosine_attention.py  12_hyperbolic_circumference.py  13_equator_concentration.py  15_adaptive_curvature_layer.py
snippets/series/: 00_geodesic_intro.py  00_random_orthogonality.py  00_slerp.py  01_bow_order_loss.py  01_manifold_learning_swiss_roll.py  01_pca_digits_projection.py  01_svm_margin_visualization.py  02_distance_concentration.py  02_highdim_orthogonality.py  02_word2vec_norm_frequency.py  03_fp16_instability_demo.py  03_l2_normalize.py  03_normalized_linear.py  03_spherical_projection_pseudocode.py  03_vmf_distribution_plot.py  04_gumbel_softmax.py  04_natural_gradient_step.py  04_normalized_classifier.py  04_stable_softmax.py  05_arcface_naive.py  05_arcface_stable.py  (+41 more)
